--- a/package.json
+++ b/package.json
@@ -5,18 +5,29 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/theme-ui": "^0.3.2",
     "contentful": "^7.14.4",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-feather": "^2.0.8"
+    "react-feather": "^2.0.8",
+    "theme-ui": "^0.3.1"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.3",
     "@types/node": "^14.0.6",
     "@types/react": "^16.9.35",
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.9.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
   }
 }
