--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
-  "env": {
-    "CONTENTFUL_SPACE_ID": "@contentful_space_id",
-    "CONTENTFUL_ACCESS_TOKEN": "@contentful_access_token"
-  },
   "build": {
     "env": {
-      "CONTENTFUL_SPACE_ID": "@contentful_space_id",
-      "CONTENTFUL_ACCESS_TOKEN": "@contentful_access_token"
+      "NEXT_PUBLIC_CONTENTFUL_SPACE_ID": "@contentful_space_id",
+      "NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN": "@contentful_access_token"
     }
   }
 }
