--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-feather": "^2.0.8",
+    "react-spring": "^8.0.27",
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
